--- a/WEB_153502_Tolstoi/Areas/Admin/Views/Admin/Create.cshtml
+++ b/WEB_153502_Tolstoi/Areas/Admin/Views/Admin/Create.cshtml
@@ -11,7 +11,11 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" enctype="multipart/form-data">
-            <input type="hidden" asp-for="Game.Id" />
+            <div class="form-group" hidden>
+                <label asp-for="Game.Id" class="control-label"></label>
+                <input asp-for="Game.Id" class="form-control" />
+                <span asp-validation-for="Game.Id" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Game.Name" class="control-label"></label>
                 <input asp-for="Game.Name" class="form-control" />
