--- a/WEB_153502_Tolstoi/Views/_ViewImports.cshtml
+++ b/WEB_153502_Tolstoi/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using WEB_153502_Tolstoi.Models
 @using Web_153502_Tolstoi.Domain.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WEB_153502_Tolstoi
